unpackaged/main/default/objects/B2B_Mood_Board__c/B2B_Mood_Board__c.object-meta.xml
<CustomObject>
    <label>B2B Moodboard</label>
    <nameField>
        <displayFormat>MB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Moodboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>