unpackaged/main/default/objects/B2B_Mood_Board__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>B2B_Mood_Boards</relationshipName>
    <type>Lookup</type>
</CustomField>