unpackaged/main/default/objects/B2B_Mood_Board__c/fields/Mood_Board_Data__c.field-meta.xml
<CustomField>
    <fullName>Mood_Board_Data__c</fullName>
    <label>Moodboard Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>