unpackaged/main/default/objects/B2B_Mood_Board__c/fields/Mood_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Mood_Board_Name__c</fullName>
    <label>Moodboard Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>